--- a/index.html
+++ b/index.html
@@ -13,19 +13,19 @@
                 <div id="nav">
                     <h3>Navigation</h3>
                     <ul>
-                        <li>Home</li>
-                        <li>About</li>
-                        <li>Contact</li>
+                        <li><a class="selected" href="">Home</a></li>
+                        <li><a href="">About</a></li>
+                        <li><a href="">Contact</a></li>
                     </ul>
                 </div>
             
                 <div id="main">
                     <h2>Homepage</h2>
-                    <h2>Homepage</h2>
 
-                <p>PARGRAPH PARAGRAPH PARAGRAPH</p>
-                <p>PARAGRAPH PARAGRAPH PARAGRAPH</p>
-                </div>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque vulputate, dui ac tempus efficitur, magna est pulvinar sapien, vel ullamcorper diam sem at leo.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque vulputate, dui ac tempus efficitur, magna est pulvinar sapien, vel ullamcorper diam sem at leo.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque vulputate, dui ac tempus efficitur, magna est pulvinar sapien, vel ullamcorper diam sem at leo.</p>
+                 </div>
             </div>
             
    
@@ -37,7 +37,25 @@
         </div>      
 
 
-
+        <table>
+            <tr> <!-- Row 1 -->
+              <th></th>
+              <th>Saturday</th>
+              <th>Sunday</th>
+            </tr>
+            <tr> <!-- Row 2 -->
+              <th>Morning</th>
+              <td rowspan="2">Work</td>
+              <td rowspan="3">Relax</td>
+            </tr>
+            <tr> <!-- Row 3 -->
+              <th>Afternoon</th>
+            </tr>
+            <tr> <!-- Row 4 -->
+              <th>Evening</th>
+              <td>Dinner</td>
+            </tr>
+          </table>
 
 
 
